--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,10 +30,12 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t dzapata1995/docker-graphql:0.0.2 .
+        docker build -t dzapata1995/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
         docker push dzapata1995/docker-graphql:0.0.2
+        docker push dzapata1995/docker-graphql:latest
 
 #    - name: Build the Docker image
 #     run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
